<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical"
    tools:context="com.example.jennatillotson.musicfind.ArtistDetailActivity">

    <ProgressBar
        android:id="@+id/progressSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        style="?android:attr/progressBarStyleLarge"/>

    <TextView
        android:id="@+id/no_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="No info for this artist!"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/detailLayout">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/artistImage"
                android:contentDescription="@string/artist"
                android:background="#fff"
                android:elevation="5dp"
                android:layout_marginBottom="10dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/artistName"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="32sp"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/artistGenre"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/artistStyle"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/artistMood"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:paddingTop="10dp"
                android:paddingHorizontal="10dp"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="gone"/>

            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/expand_text_view"
                app:maxCollapsedLines="4"
                app:animDuration="200">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/expandable_text"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:layout_gravity="right|bottom"
                    android:background="@android:color/transparent"/>
            </com.ms.square.android.expandabletextview.ExpandableTextView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:id="@+id/links">

            </LinearLayout>

            <Button
                android:id="@+id/discography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryLight"
                android:textSize="18sp"
                android:textColor="#fff"
                android:text="@string/view_discography"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <Button
                android:id="@+id/newSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryLight"
                android:textSize="18sp"
                android:textColor="#fff"
                android:text="Find similar artists"
                android:layout_margin="10dp"
                android:gravity="center"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
